# ProjectBlindXY

./: .cyignore  .gitignore  Makefile  NOTICE  README.md  main.c  meson.build
Sources/Application/inc/: DCTCalculator.hpp
Sources/Application/src/: DCTCalculator.cpp  GlobalObjects.cpp
Sources/Drivers/inc/: BGT60TRXX.hpp  BMI270.hpp  HelpSignaler.hpp  PWMDrivenDevice.hpp
Sources/Drivers/src/: BGT60TRXX.cpp  BMI270.cpp  HelpSignaler.cpp  PWMDrivenDevice.cpp
Sources/MachineLearning/GestureDetection/: .gitignore  README.md
Sources/MachineLearning/GestureDetection/inc/: GestureDetectionModel.h.example
Sources/MachineLearning/GestureDetection/src/: GestureDetectionModel.c.example
Sources/MessageSystem/inc/: Communication.hpp  Message.hpp  MessageProvider.hpp  MessageSender.hpp  Node.hpp
Sources/MessageSystem/src/: Message.cpp  MessageProvider.cpp  MessageSender.cpp  Node.cpp
Sources/RTOS/Threads/APIs/: MotionThreadAPI.hpp  RadarThreadAPI.hpp
Sources/RTOS/Threads/inc/: LoopbackThread.hpp  MotionThread.hpp  RadarThread.hpp  Thread.hpp  USBThread.hpp
Sources/RTOS/Threads/src/: LoopbackThread.cpp  MotionThread.cpp  RadarThread.cpp  USBThread.cpp
Sources/RTOS/inc/: FreeRTOSConfig.h  Mutex.hpp  TimeStamp.hpp
Sources/RTOS/src/: Mutex.cpp  TimeStamp.cpp
Sources/Wrappers/inc/: GPIOI.hpp  GPIOInternal.hpp  I2CI.hpp  I2CInternal.hpp  PWMI.hpp  PWMInternal.hpp  SPII.hpp  SPIInternal.hpp
Sources/Wrappers/src/: GPIOInternal.cpp  I2CInternal.cpp  PWMInternal.cpp  SPIInternal.cpp
Test/: main.cpp
Test/MessageExchangeTest/: MessageExchangeTest.cpp  meson.build
Test/MessageTest/: MessageTest.cpp  meson.build
Test/Mocks/inc/: GPIOMock.hpp  MathMock.hpp  MutexMock.hpp  PWMMock.hpp  RadarMock.hpp  SPIMock.hpp  TaskMock.hpp  TimedGPIOMock.hpp  UartMock.hpp
Test/Mocks/src/: MathMock.cpp  MutexMock.cpp  TaskMock.cpp  UartMock.cpp
Test/Stubs/inc/: FreeRTOS.h  arm_math.h  cy_retarget_io.h  cyhal.h  cyhal_gpio.h  semphr.h  task.h  xensiv_bgt60trxx_mtb.h
Test/Stubs/src/: RadarStub.cpp  cy_retarget_io.c  semphr.c
Test/ThreadsTest/: RadarThreadTest.cpp  meson.build
